# Fyrox-Lua

./: .gitignore  .gitmodules  Cargo.toml  backlog.md  roadmap.md
bindgen/: Cargo.toml  expand.rs  fyrox_expand.sh  rustc-ice-2024-06-20T21_38_50-33796.txt  rustc-ice-2024-06-20T21_39_29-36504.txt
bindgen/src/: lib.rs
bindgen/src/expand_parser/: mod.rs  model.rs  parse_crate.rs  parse_dir.rs  parse_item.rs  parse_use_tree.rs
data/: scene.rgs
editor/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-wasm/: Cargo.toml
executor-wasm/src/: lib.rs
executor/src/: main.rs
game/: Cargo.toml  fyrox.lua
game-dylib/: Cargo.toml
game-dylib/src/: lib.rs
game/api/: BulletSimple.luau
game/src/: lib.rs  lua_bindings.rs  lua_reflect_bindings.rs  lua_utils.rs  node_based_expr.rs  plugin.rs  reflect_based_01.rs  script.rs  script_context.rs  script_def.rs  script_object.rs  stacktrace.rs
game/src/reflect_based/: conversion.rs  mod.rs  reflect.rs  reflect_lua_bindings.rs
game/src/script/: metadata.rs  mod.rs  reflect.rs
scripts/: Bullet.lua  Turret.lua
